SmartAdapter, Pics not included on Adapter yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,6 @@
     <string name="placeholder_one">placeholder one</string>
     <string name="border">border</string>
     <string name="profile_pict">profile pict</string>
+    <string name="billy_kaleb">Billy Kaleb</string>
+    <string name="rp_20_000">Rp. 20.000</string>
 </resources>
